--- a/.github/workflows/main_cvfa-pptx.yml
+++ b/.github/workflows/main_cvfa-pptx.yml
@@ -5,12 +5,8 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
-env:
-  PYTHON_VERSION: '3.10'
-  PACKAGE_PATH: '.'   # repo root contains host.json
-
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -19,45 +15,17 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ env.PYTHON_VERSION }}
+          python-version: '3.10'
 
       - name: Vendor deps into .python_packages
+        shell: bash
         run: |
           python -m pip install --upgrade pip wheel setuptools
           python -m pip install -r requirements.txt -t .python_packages/lib/site-packages
-          python - <<'PY'
-import jinja2, azure.functions, requests
-print("✅ jinja2", jinja2.__version__)
-print("✅ azure.functions", azure.functions.__version__)
-print("✅ requests", requests.__version__)
-PY
-
-      - name: Create deployment zip
-        run: |
-          zip -r release.zip . \
-            -x ".git/*" ".github/*" ".venv/*" "venv/*" "__pycache__/*" ".pytest_cache/*" "*.PublishSettings" "local.settings.json"
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: function-app
-          path: release.zip
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: function-app
-
-      - name: Unzip artifact
-        run: unzip -q release.zip
 
       - name: Deploy to Azure Functions
         uses: Azure/functions-action@v1
         with:
           app-name: cvfa-pptx-acgjage0g8csb2cq
-          package: ${{ env.PACKAGE_PATH }}
+          package: .
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
