--- a/.github/workflows/main_cvfa-pptx.yml
+++ b/.github/workflows/main_cvfa-pptx.yml
@@ -12,20 +12,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-
-      - name: Vendor deps into .python_packages
-        shell: bash
-        run: |
-          python -m pip install --upgrade pip wheel setuptools
-          python -m pip install -r requirements.txt -t .python_packages/lib/site-packages
-
-      - name: Deploy to Azure Functions
+      - name: Deploy to Azure Functions (remote Oryx build on Kudu)
         uses: Azure/functions-action@v1
         with:
           app-name: cvfa-pptx-acgjage0g8csb2cq
-          package: .
+          package: .              # repo root (host.json here)
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
