--- a/.github/workflows/main_cvfa-pptx.yml
+++ b/.github/workflows/main_cvfa-pptx.yml
@@ -9,12 +9,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Deploy to Azure Functions (remote Oryx build on Kudu)
+      - uses: actions/checkout@v4
+      - name: Deploy to Azure Functions (Oryx remote build)
         uses: Azure/functions-action@v1
         with:
           app-name: cvfa-pptx-acgjage0g8csb2cq
-          package: .              # repo root (host.json here)
+          package: .
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
+          scm-do-build-during-deployment: true
+          enable-oryx-build: true
+          respect-funcignore: true
