--- a/.github/workflows/main_cvfa-pptx.yml
+++ b/.github/workflows/main_cvfa-pptx.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -15,9 +17,10 @@ jobs:
       - name: Deploy to Azure Functions (Oryx remote build)
         uses: Azure/functions-action@v1
         with:
-          app-name: "cvfa-pptx-acgjage0g8csb2cq"
-          package: "."
+          app-name: "cvfa-pptx-acgjage0g8csb2cq"              # your Function App name
+          package: "."                                         # repo root contains host.json
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
+          remote-build: true                                   # <-- ensures server-side Oryx build
           scm-do-build-during-deployment: true
           enable-oryx-build: true
           respect-funcignore: true
