--- a/.github/workflows/main_cvfa-pptx.yml
+++ b/.github/workflows/main_cvfa-pptx.yml
@@ -7,7 +7,6 @@ on:
 
 jobs:
   build:
-    # Build inside the SAME image Azure Functions uses → compatible wheels (no glibc issues)
     runs-on: ubuntu-latest
     container:
       image: mcr.microsoft.com/azure-functions/python:4-python3.10
@@ -20,16 +19,18 @@ jobs:
           ls -la
           test -f host.json
           test -f requirements.txt
-          echo "requirements.txt (top):"
           head -n 20 requirements.txt || true
+
+      - name: Install zip in container
+        run: |
+          apt-get update
+          apt-get install -y zip
 
       - name: Vendor deps into .python_packages (inside AF image)
         run: |
           python -m pip install --upgrade pip wheel setuptools
           python -m pip install -r requirements.txt -t .python_packages/lib/site-packages
-          # verify by adding .python_packages to PYTHONPATH
-          PYTHONPATH=.python_packages/lib/site-packages \
-          python -c "import jinja2, azure.functions, requests; print('vendored OK:', jinja2.__version__)"
+          PYTHONPATH=.python_packages/lib/site-packages python -c "import jinja2; print('vendored OK:', jinja2.__version__)"
 
       - name: Create deployment zip
         run: |
@@ -50,14 +51,12 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: function-app
-
-      - name: Unzip artifact
-        run: unzip -q release.zip
+          path: .
 
       - name: Deploy to Azure Functions
         uses: Azure/functions-action@v1
         with:
-          app-name: "cvfa-pptx-acgjage0g8csb2cq"               # your Function App
-          package: "."                                         # deploy the unzipped artifact
+          app-name: "cvfa-pptx-acgjage0g8csb2cq"
+          package: "release.zip"   # deploy the zip directly
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
           respect-funcignore: true
